package lab06.Ex1;

public enum Cream {
    Whipped_Cream, Red_Berries, Vanilla, Strawberry
}

