package lab06.Ex1;

public enum Shape {
    Square, Rectangle, Circle
}