package lab06.Ex1;

public enum Topping {
    Fruit, Chocolate, Strawberry
}